[workspace]
name     = "ohh-stake"
members  = ["contracts/*"]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
homepage   = "https://ohhnft.io"
repository = "https://github.com/ohhnft/stake"
license    = "ALL RIGHTS RESERVED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cosmwasm-std = { version = "1.3.1", features = ["staking"] }
cosmwasm-schema = "1.3.1"
cw-storage-plus = "1.1.0"
sylvia = "0.7.0"
cw2 = "1.1.2"

serde = "1.0.198"
schemars = "0.8"
semver = "1.0.16"
thiserror = "1.0.61"

cw-multi-test = "0.19.0"