[package]
name = "tests"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "testnet-frac-init"
path = "src/bin/testnet/frac/init.rs"
doc  = false

[[bin]]
name = "testnet-frac-deposit"
path = "src/bin/testnet/frac/deposit.rs"
doc  = false

[[bin]]
name = "testnet-frac-withdraw"
path = "src/bin/testnet/frac/withdraw.rs"
doc  = false

[dependencies]
cw-orch = { version = "0.24.0", features = ["daemon"] }
cw721 = "0.18.0"
cw721-base = "0.18.0"

cw-orch-osmosis-test-tube = "0.3.0"
osmosis-test-tube = "25.0.0"
env_logger = "0.11.3"
prost-types = "0.12.3"
prost = "0.12.3"
dotenv = "0.15.0"

cw-multi-test = { workspace = true }
cosmwasm-std = { workspace = true }

cw721-lockup = { path = "../contracts/cw721-lockup" }
native-lockup = { path = "../contracts/native-lockup" }
frac-lockup = { path = "../contracts/frac-lockup" }

fixed-stake = { path = "../contracts/fixed-stake" }
rand = "0.8.5"
